--- a/cw.html
+++ b/cw.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="cw.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="nav">
         <img src="logo.png" class="logo">
@@ -23,43 +25,54 @@
     </div>
     <div class="box">
         <div class="card">
-            <p><h1>Register for swim lessons</h1></p>
+            <p>
+            <h1>Register for swim lessons</h1>
+            </p>
             <p>Our experienced instructors offer a variety of swimming lessons for children and teens</p>
         </div>
 
         <div class="card">
-            <p><h1>Franchise Opportunities</h1></p>
+            <p>
+            <h1>Franchise Opportunities</h1>
+            </p>
             <p>Swimming School Franchise is positioned as he leader in the thriving children's education</p>
         </div>
 
         <div class="card">
-            <p><h1>What Level Is My Child?</h1></p>
+            <p>
+            <h1>What Level Is My Child?</h1>
+            </p>
             <p>Our experienced instructors offer a variety of swimming lessons for children and teens</p>
         </div>
 
         <div class="card">
-            <p><h1>Register for swim lessons</h1></p>
+            <p>
+            <h1>Register for swim lessons</h1>
+            </p>
             <p>Our experienced instructors offer a variety of swimming lessons for children and teens</p>
         </div>
     </div>
-   
+
     <div class="box0">
         <div class="box1">
-            <div class="txt">    
+            <div class="txt">
                 <h1>Welcome to our school!</h1>
-                <p>Swimming School is proud to provide-state-of-the-art <br> aquatic facilities that are dedicated to indoor <br> swim classes and programs for children.</p>
+                <p>Swimming School is proud to provide-state-of-the-art <br> aquatic facilities that are dedicated to
+                    indoor <br> swim classes and programs for children.</p>
                 <button>Read More</button>
             </div>
-                <img src="swimmer1.jpg" width="600" height="400">
-            </div>
-            <div class="box2">
-                <img src="swimmer2.jpg" width="600" height="400">
-            <div class="txt">    
+            <img src="swimmer1.jpg" width="600" height="400">
+        </div>
+        <div class="box2">
+            <img src="swimmer2.jpg" width="600" height="400">
+            <div class="txt">
                 <h1>Welcome to our school!</h1>
-                <p>Swimming School is proud to provide-state-of-the-art <br> aquatic facilities that are dedicated to indoor <br> swim classes and programs for children.</p>
+                <p>Swimming School is proud to provide-state-of-the-art <br> aquatic facilities that are dedicated to
+                    indoor <br> swim classes and programs for children.</p>
                 <button>Read More</button>
-            </div>  
             </div>
+        </div>
     </div>
 </body>
+
 </html>
